--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
     
-    <title>Landing Page</title>
+    <title>Intégration Web</title>
     
     <link rel="stylesheet" href="style.css">
 
